# ai-crawler

./: .dockerignore  .env.example  .gitignore  5A288E10  Dockerfile  README.md  leads-enriched.xlsx  leads-master-enriched.xlsx  leads-master.xlsx  leads-sanjose-50mi-20260605-1610.xlsx  leads-sanjose-50mi-20260605.xlsx  leads-sanjose-50mi.xlsx  leads-skip-enrich-after-20260301.before-date-sort-filter.backup.xlsx  leads-skip-enrich-after-20260301.xlsx  leads-skip-enrich.before-20260301-filter.backup.xlsx  leads-skip-enrich.xlsx  leads-with-portals-skip-enrich.xlsx  leads.xlsx  pyproject.toml  railway.toml  todolist.md
config/: jurisdictions.yaml  sources.yaml
config/cpra/: portals.yaml
deploy/: README.md  publish-site.sh  railway-run.sh  static-site.md
docs/: cpra-request-template.md
site/: app.js  index.html
site/functions/: _middleware.js
src/bay_area_projectintel/: __init__.py  cli.py  config.py  db.py  geo.py  models.py  notify.py  report.py
src/bay_area_projectintel/compliance/: politeness.py
src/bay_area_projectintel/enrichment/: __init__.py  base.py  browser.py  cslb.py  web.py
src/bay_area_projectintel/export/: __init__.py  excel.py  web_json.py
src/bay_area_projectintel/llm/: client.py  prompts.py
src/bay_area_projectintel/mcp/: __init__.py  server.py
src/bay_area_projectintel/pipeline/: classify.py  dedupe.py  normalize.py
src/bay_area_projectintel/sources/: __init__.py  arcgis.py  base.py  cpra_import.py  discover.py  portal_json.py  samgov.py  socrata.py
src/bay_area_projectintel/web/: app.py
src/bay_area_projectintel/web/templates/: email_setup.html  index.html
tests/: test_browser_enrichment.py  test_classify.py  test_config.py  test_cpra_import.py  test_cslb.py  test_db.py  test_dedupe.py  test_discover.py  test_email.py  test_export.py  test_geo.py  test_normalize.py  test_notify.py  test_report.py  test_samgov.py  test_sources_arcgis.py  test_sources_portal_json.py  test_sources_socrata.py  test_web.py  test_web_enrichment.py  test_web_json.py
