[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bay-area-projectintel"
version = "0.1.0"
description = "Local CLI for discovering Bay Area B2B project leads from public data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "openai>=1.40",
  "openpyxl>=3.1",
  "pandas>=2.2",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "python-dotenv>=1.0",
  "pyyaml>=6.0",
  "rapidfuzz>=3.9",
  "rich>=13.7",
  "scrapling>=0.4",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "respx>=0.21",
]
browser = [
  "scrapling[fetchers]>=0.4",
]
mcp = [
  "mcp>=1.2",
]
web = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
]

[project.scripts]
projectintel = "bay_area_projectintel.cli:app"
projectintel-mcp = "bay_area_projectintel.mcp.server:main"
projectintel-web = "bay_area_projectintel.web.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"bay_area_projectintel.web" = ["templates/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
